2004-07-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Swap invocations of REGEXXER_ARG_ENABLE_WARNINGS()
	and REGEXXER_CXXLINK_VERSION_SCRIPT(), just in case the additional
	warning flags break the test program used by the latter macro.

0.8:

2004-07-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* NEWS: Update.

2004-07-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (hbox_file): Increase "spacing" to 9.

2004-07-06  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/exported-symbols: New file; an ld version script which lists
	the symbols that should be exported explicitely.  Using that makes
	the stripped regexxer binary more than 100k smaller!

	* macros/cxx.m4 (REGEXXER_CXXLINK_VERSION_SCRIPT): New macro to
	test if the linker supports the -Wl,--version-script argument.

	* configure.ac: Call REGEXXER_CXXLINK_VERSION_SCRIPT().

	* src/Makefile.am (dist_noinst_DATA): Distribute exported-symbols.
	(regexxer_DEPENDENCIES): Depend on exported-symbols.
	(regexxer_LDFLAGS): Pass $(REGEXXER_VERSION_SCRIPT) to the linker.

2004-07-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (apply_label_what_markup): Rename from
	apply_label_markup for clarity.

2004-07-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_matches_at_path_iter): Use
	reference arguments instead of pointers.  Make use of sigc::ref()
	to bind a reference argument to a signal handler.
	(FileTree::replace_matches_at_path_iter): ditto
	(FileTree::save_file_at_iter): Likewise.  Also get rid of the
	on-demand creation of error_list, because it's unnecessary and
	not exception-safe.  The caller is responsible for instantiating
	the MessageList now.

2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (validate_encoding): Be slightly more picky
	and demand the first and last characters of the encoding string to
	be alpha-numeric.

2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>
