@@ -51,7 +51,6 @@ REGEXXER_PKG_PATH_PROG([GCONFTOOL], [gconf-2.0], [gconftool-2])
 AM_GCONF_SOURCE_2()
 AC_SUBST([REGEXXER_GCONF_DIRECTORY], ['/apps/regexxer'])
 
-REGEXXER_CXX_HAS_STD_LOCALE()
 REGEXXER_CXXLINK_VERSION_SCRIPT([src/exported-symbols])
 REGEXXER_ARG_ENABLE_WARNINGS()
 
